Corrected Task03